--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,7 @@
     </dependencies>
 
     <build>
-        <finalName>server</finalName>
+        <finalName>myddl-server</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
